# VisRTX

./: .clang-format-ignore  .envrc  .luarc.json  CMakeLists.txt  LICENSE  README.md
devices/rtx/: CMakeLists.txt  README.md  optix_visrtx.h  visrtx_device.json
devices/rtx/apps/: CMakeLists.txt
devices/rtx/apps/tests/: CMakeLists.txt
devices/rtx/apps/tools/: CMakeLists.txt
devices/rtx/cmake/: EmbedPTX.cmake  EmbedPTXRun.cmake  FindOptiX.cmake  FindVisRTX.cmake  Findglm.cmake  Findnanovdb.cmake  VisRTXConfig.cmake.in  appendSearchPaths.cmake  embed_resource.cmake
devices/rtx/cmake/build_deps/: superbuild_macros.cmake
devices/rtx/device/: CMakeLists.txt  Object.cpp  Object.h  RegisteredObject.h  VisRTXDevice.cpp  VisRTXDevice.h  VisRTXLibrary.cpp  optix_visrtx.cpp  optix_visrtx.h  visrtx_device.json
devices/rtx/device/array/: Array.cpp  Array.h  Array1D.cpp  Array1D.h  Array2D.cpp  Array2D.h  Array3D.cpp  Array3D.h  ObjectArray.cpp  ObjectArray.h  UploadableArray.cpp  UploadableArray.h
devices/rtx/device/camera/: Camera.cpp  Camera.h  Orthographic.cpp  Orthographic.h  Perspective.cpp  Perspective.h  UnknownCamera.cpp  UnknownCamera.h
devices/rtx/device/frame/: Denoiser.cu  Denoiser.h  Frame.cu  Frame.h
devices/rtx/device/geometry/: ComputeTangent.cu  ComputeTangent.h  Cone.cpp  Cone.h  Curve.cpp  Curve.h  Cylinder.cpp  Cylinder.h  Geometry.cpp  Geometry.h  Intersectors_ptx.cu  Neural.cpp  Neural.h  Quad.cpp  Quad.h  Sphere.cu  Sphere.h  Triangle.cpp  Triangle.h  UnknownGeometry.cpp  UnknownGeometry.h
devices/rtx/device/gpu/: cameraCreateRay.h  computeAO.h  createScreenSample.h  curveHelpers.h  dda.h  evalMaterialParameters.h  evalShading.h  gpu_debug.h  gpu_decl.h  gpu_math.h  gpu_objects.h  gpu_util.h  gridTraversal.h  intersectRay.h  populateHit.h  sampleLight.h  sampleSpatialField.h  sbt.h  shadingState.h  shading_api.h  uniformGrid.h  volumeIntegration.h
devices/rtx/device/light/: Directional.cpp  Directional.h  HDRI.cpp  HDRI.h  Light.cpp  Light.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Ring.cpp  Ring.h  Spot.cpp  Spot.h  UnknownLight.cpp  UnknownLight.h
devices/rtx/device/material/: MDL.cpp  MDL.h  Material.cpp  Material.h  Matte.cpp  Matte.h  PBR.cpp  PBR.h  PhysicallyBasedMDL.cpp  PhysicallyBasedMDL.h  UnknownMaterial.cpp  UnknownMaterial.h
devices/rtx/device/mdl/: Logger.cpp  Logger.h  MaterialRegistry.cpp  MaterialRegistry.h  SamplerRegistry.cpp  SamplerRegistry.h  dds.h  ptx.cpp  ptx.h
devices/rtx/device/renderer/: AmbientOcclusion.cpp  AmbientOcclusion.h  AmbientOcclusion_ptx.cu  Debug.cpp  Debug.h  DebugMethod.h  Debug_ptx.cu  DiffusePathTracer.cpp  DiffusePathTracer.h  DiffusePathTracer_ptx.cu  DirectLight.cpp  DirectLight.h  DirectLight_ptx.cu  Fast.cpp  Fast.h  Fast_ptx.cu  Interactive.cpp  Interactive.h  Interactive_ptx.cu  PathTracer.cpp  PathTracer.h  PathTracer_ptx.cu  Quality.cpp  Quality.h  Quality_ptx.cu  Raycast.cpp  Raycast.h  Raycast_ptx.cu  Renderer.cpp  Renderer.h  Test.cpp  Test.h  Test_ptx.cu  UnknownRenderer.cpp  UnknownRenderer.h
devices/rtx/device/sampler/: CompressedImage2D.cpp  CompressedImage2D.h  Image1D.cpp  Image1D.h  Image2D.cpp  Image2D.h  Image3D.cpp  Image3D.h  PrimitiveSampler.cpp  PrimitiveSampler.h  Sampler.cpp  Sampler.h  TransformSampler.cpp  TransformSampler.h  UnknownSampler.cpp  UnknownSampler.h
devices/rtx/device/spatial_field/: AnalyticalField.h  AnalyticalFieldData.h  AnalyticalFieldSampler.cpp  AnalyticalFieldSampler.h  AnalyticalFieldSampler_ptx.cu  CustomField.h  CustomFieldSampler.cpp  CustomFieldSampler.h  CustomFieldSampler_ptx.cu  NvdbRectilinearField.cpp  NvdbRectilinearField.h  NvdbRectilinearSampler.cpp  NvdbRectilinearSampler.h  NvdbRectilinearSampler_ptx.cu  NvdbRegularField.cpp  NvdbRegularField.h  (+24 more)
devices/rtx/frame/: Denoiser.cu  Denoiser.h  Frame.cu  Frame.h
devices/rtx/gpu/: computeAO.h  evalShading.h  gpu_decl.h  gpu_math.h  gpu_objects.h  populateHit.h  sampleLight.h  shadingState.h
devices/rtx/libmdl/: ArgumentBlockDescriptor.cpp  ArgumentBlockDescriptor.h  ArgumentBlockInstance.cpp  ArgumentBlockInstance.h  CMakeLists.txt  Core.cpp  Core.h  TimeStamp.cpp  TimeStamp.h  helpers.cpp  helpers.h  ptx.cpp  ptx.h  types.h  uuid.h
devices/rtx/mdl/: MaterialRegistry.cpp  SamplerRegistry.cpp
devices/rtx/renderer/: DirectLight_ptx.cu  Renderer.cpp  Renderer.h
devices/rtx/scene/: World.cpp
devices/rtx/shaders/: CMakeLists.txt  MDLShader_ptx.cu  PhysicallyBasedShader_ptx.cu
devices/rtx/src/: CMakeLists.txt  VisRTXDevice.cpp  visrtx_device.json
tsd/: CMakeLists.txt  README.md
tsd/apps/: CMakeLists.txt
tsd/apps/interactive/: CMakeLists.txt
tsd/apps/tools/: CMakeLists.txt  obj2header.cpp  printTSD.cpp  tsdLua.cpp  tsdPrint.cpp  tsdRender.cpp  tsdVolumeToNanoVDB.cpp
tsd/apps/tutorial/: CMakeLists.txt  tsdTutorialDataTreeDemo.cpp  tsdTutorialExportUSDScene.cpp  tsdTutorialFlipDiff.cpp  tsdTutorialForestDemo.cpp  tsdTutorialLoadContext.cpp  tsdTutorialLoadObj.cpp  tsdTutorialLoadScene.cpp  tsdTutorialLoadUSD.cpp  tsdTutorialMultiRender.cpp  tsdTutorialPipeline.cpp  tsdTutorialRender.cpp  tsdTutorialSaveContext.cpp  tsdTutorialSaveScene.cpp  tsdTutorialSimple.cpp
tsd/cmake/: Findtsd_fmt.cmake  Findtsd_glm.cmake  Findtsd_nanovdb.cmake  Findtsd_silo.cmake  mark_cache_variables_as_advanced.cmake
tsd/cmake/build_deps/: CMakeLists.txt
tsd/python/: convert_usd_points_to_axyz.py  e57_to_binary.py  merge_agx_timeseries.py  print_usd.py
tsd/scripts/: init.lua  test_lua_api.lua
tsd/scripts/examples/: render_scene.lua  save_scene.lua
tsd/src/: CMakeLists.txt
tsd/src/anari_tsd/: Array.cpp  Array.h  CMakeLists.txt  Device.cpp  Device.h  DeviceGlobalState.cpp  DeviceGlobalState.h  Frame.cpp  Frame.h  Group.cpp  Group.h  Instance.cpp  Instance.h  Library.cpp  Object.cpp  Object.h  World.cpp  World.h
tsd/src/tsd/: CMakeLists.txt
tsd/tests/: CMakeLists.txt  test_Array.cpp  test_DataTree.cpp  test_FlatMap.cpp  test_Forest.cpp  test_Geometry.cpp  test_IndexedVector.cpp  test_Material.cpp  test_Math.cpp  test_Object.cpp  test_ObjectPool.cpp  test_Parameter.cpp  test_Token.cpp
(+560 files in other folders)
